# AI-CSKH

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: schemas.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/graph/: agent.py
backend/app/models/: chat_log.py
backend/app/repositories/: chat_logs.py
backend/app/services/: llm.py  memory.py  rag.py  safety.py
backend/app/tools/: discord_notify.py  order_lookup.py  ticketing.py
backend/app/utils/: text.py
backend/data/: faq.json  orders.json
backend/scripts/: rebuild_index.py
backend/tests/: test_agent.py  test_llm.py  test_memory.py  test_order_lookup.py  test_safety.py
docs/: architecture.md  development.md  setup.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/chat/reset/: route.ts
frontend/components/: chat-workspace.tsx  tool-call-badge.tsx  tool-payload-panel.tsx
